tests/ui/impl-unused-rps-in-assoc-type.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-rps-in-assoc-type.rs:11:6
   |
LL | impl<'a> Fun for Holder {
   |      ^^ unconstrained lifetime parameter
   |
help: this use of an otherwise unconstrained lifetime is not allowed
  --> $DIR/impl-unused-rps-in-assoc-type.rs:12:19
   |
LL |     type Output = &'a str;
   |                   ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
